# dev-deepagents-cli

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.dev  Dockerfile_node.dev  README.md  change_owner.sh  deploy.sh  deploy.sh.example  deploy_local.sh  docker-compose.yaml  pyproject.toml  rebuild_or_restart.sh
app/: main.py  (+4 more)
backend/: backend_agent_main.py  file_main.py  langgraph.json  main.py  package-lock.json  package.json  pyproject.toml  start.sh  test.py
backend/.deepagents/agent/: agent.md
backend/.deepagents/agent/skills/auto-brainstorming/: SKILL.md
backend/.deepagents/agent/skills/auto-brainstorming/references/: concept_template.md  product_manager.md  (+2 more)
backend/.deepagents/agent/skills/auto-ethnography/: SKILL.md
backend/.deepagents/agent/skills/docx-creator/: SKILL.md  docx-js.md
backend/.deepagents/agent/skills/numpy/: SKILL.md
backend/.deepagents/agent/skills/persona-builder/: SKILL.md
backend/.deepagents/agent/skills/skill-creator/: SKILL.md
backend/.deepagents/agent/skills/slide-generator/: SKILL.md
backend/.deepagents/agent/skills/video-analyzer/: SKILL.md
backend/deepagents_cli/: __init__.py  __main__.py  agent.py  agent_memory.py  commands.py  config.py  default_agent_prompt_jp.md  main.py  project_utils.py  shell.py  token_utils.py  tools.py  ui.py
backend/deepagents_cli/skills/: __init__.py  commands.py  load.py  middleware.py
backend/file_api/: cloud_storage.py  config.py  file_watcher.py  user_utils.py
backend/resource/: multi_agents.md
backend/workspace/stock/: cotopat.md  manual.json
(+59 files in other folders)
